make LCS work (but really really worse)